[project]
name = "decoy-state-protocol"
version = "0.1.0"
description = "Finite-size decoy state protocol implementation for quantum key distribution"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Mykyta Klen", email = "the@klen.md"}]
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scipy"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
